WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82720
[Qt] WK1/WK2 layout test results are diverging
https://bugs.webkit.org/show_bug.cgi?id=82720
Summary
[Qt] WK1/WK2 layout test results are diverging
Csaba Osztrogonác
Reported
2012-03-30 04:46:21 PDT
After updating Qt5 on the bots from 7d0327830bb4768753cb0c14a23d98fed08be7d2 to 74f7b7f74c0e9ce99123fc836fd22f1f0b5688fe, most of the tests started to fail with Qt5-WK1.
http://build.webkit.sed.hu/results/x86-32%20Linux%20Qt%20Release%20-%20Qt5-WebKit1/r112651%20%285500%29/results.html
So the test coverage is 0% now. :(
Attachments
Patch
(2.17 KB, patch)
2012-04-04 04:47 PDT
,
Pierre Rossi
no flags
Details
Formatted Diff
Diff
Patch
(2.21 KB, patch)
2012-04-04 05:39 PDT
,
Pierre Rossi
no flags
Details
Formatted Diff
Diff
Patch
(2.17 KB, patch)
2012-04-04 06:02 PDT
,
Pierre Rossi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Pierre Rossi
Comment 1
2012-04-04 04:47:59 PDT
Created
attachment 135558
[details]
Patch
Early Warning System Bot
Comment 2
2012-04-04 04:52:18 PDT
Comment on
attachment 135558
[details]
Patch
Attachment 135558
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/12323701
Early Warning System Bot
Comment 3
2012-04-04 04:53:28 PDT
Comment on
attachment 135558
[details]
Patch
Attachment 135558
[details]
did not pass qt-wk2-ews (qt): Output:
http://queues.webkit.org/results/12324693
Pierre Rossi
Comment 4
2012-04-04 05:39:05 PDT
Created
attachment 135568
[details]
Patch
Early Warning System Bot
Comment 5
2012-04-04 05:54:53 PDT
Comment on
attachment 135568
[details]
Patch
Attachment 135568
[details]
did not pass qt-wk2-ews (qt): Output:
http://queues.webkit.org/results/12324729
Pierre Rossi
Comment 6
2012-04-04 06:02:43 PDT
Created
attachment 135572
[details]
Patch
Csaba Osztrogonác
Comment 7
2012-04-04 07:28:46 PDT
There are still 234 failing tests with Qt5-WK1:
https://gist.github.com/2301307
:(
Csaba Osztrogonác
Comment 8
2012-04-05 05:58:56 PDT
I tried the latest Qt5 hash (51ca55ff29f53b909c3614b56609e067d2066124) with your patch and with updated testfonts and 232 tests still fail on Qt5-WK1. You can find the png diffs here:
http://build.webkit.sed.hu/layout-test-results.tar.bz2
(expected results: Qt5-WK2 , actual results: Qt5-WK1) Could you check it, please?
Csaba Osztrogonác
Comment 9
2012-04-05 06:02:02 PDT
Simon, what should we do now? - still wait with updating Qt5 - update Qt5 and skip the failing 232 tests on Qt5-WK1 - update Qt5 and try to maintain these 232 tests paralelly for Qt5-WK1 and Qt5-WK2 (==Qt4-WK1)?
Csaba Osztrogonác
Comment 10
2012-04-05 08:26:19 PDT
Comment on
attachment 135572
[details]
Patch rs=me, I'll land it manually. After Pierre updated the fonts conf file in testfonts repo, it works fine.
Csaba Osztrogonác
Comment 11
2012-04-05 09:13:25 PDT
Comment on
attachment 135572
[details]
Patch Landed in
http://trac.webkit.org/changeset/113321
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug